# Chess-game-in-opengl

./: .gitignore  CMakeLists.txt  Mesh.h  main.cpp
Board/: Board.cpp  Board.h
Dependencies/glad/src/: glad.c
Game/: Game.cpp  Game.h
Shader/: Shader.h  fragment.glsl  vertex.glsl
Texture/: Texture.cpp  Texture.h
Tile/: Tile.cpp  Tile.h
